main Screen in compact view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Android School Project</string>
+    <string name="app_name">Weather</string>
     <string name="api_key">efc93cd2-4e04-445e-beec-c8e9d2b5aca1</string>
     <string name="urlExternalAPI">https://api.airvisual.com/v2/</string>
 </resources>
