--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="urlExternalAPI">https://api.airvisual.com/v2/</string>
     <string name="add_city">Add city</string>
     <string name="add_city_button">Add city button</string>
+    <string name="add_new_city">Add a new city</string>
+    <string name="navigation_close">close button</string>
 </resources>
