setting up navigation between screens but the back button in detail views keeps failing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="add_city_button">Add city button</string>
     <string name="add_new_city">Add a new city</string>
     <string name="navigation_close">close button</string>
+    <string name="navigation_back">navigate back</string>
 </resources>
